welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: '(' expected but identifier found.
 if vacation == true)
    ^sleepIn:7: error: illegal start of simple expression
} 
^